# hst

./: .gitignore  Dockerfile  Makefile  README.md  requirements-lint.txt  requirements.txt
.streamlit/: config.toml
app/: README.md  pyproject.toml
app/app/: Welcome.py  defaults.py  model.py
app/app/pages/: 1_💹_Portfolio_Simulator.py  2_🗒️_Description.py
app/app/utils/: date_range_picker.py
app/tests/: test_app.py
backend/: README.md  pyproject.toml
backend/backend/loaders/: quotes.py  tickers.py
backend/backend/transformers/: core.py
backend/tests/: test_loaders.py
backend/tests/testing_data/: quotes.csv
docs/: functional_ideas.md  technical_ideas.md
logging_configs/: stderr-file.json  stderr-json.json
sandbox/: README.md  session_state_playground.py
utils/: README.md  pyproject.toml
utils/tests/: test_utils.py
utils/utils/: converters.py  frozendict.py  logging_util.py  mylogger.py
