[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mihai <mihai@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
backend = { path = "../backend", develop = true }
utils = { path = "../utils", develop = true }
streamlit = "^1.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
