[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mihai <mihai@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.11"
pandas = "^2.2.1"
requests = "^2.31.0"
requests-cache = "^1.2.0"
yfinance = { extras = ["nospam"], version = "^0.2.37" }
beautifulsoup4 = "^4.12.3"
utils = { path = "../utils", develop = true }


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
